# vcenteremu

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py  startup.py
app/api/: appliance.py  cluster.py  datacenter.py  datastore.py  folder.py  host.py  network.py  resource_pool.py  session.py  vm.py
app/auth/: session_manager.py
app/models/: inventory.py
app/parser/: rvtools.py
app/store/: inventory_store.py
app/web/: i18n.py  routes.py
app/web/templates/: index.html
deploy/: diagnose.sh  generate-tls-cert.sh  install-nginx-tls.sh  install-rhel10.sh  install.sh  uninstall-rhel10.sh  uninstall.sh  vcenteremu-start.sh  vcenteremu.service  vcenteremu.tmpfiles.conf
deploy/nginx/: vcenteremu.conf
deploy/openshift/: buildconfig.yaml  configmap.yaml  deployment.yaml  install-openshift.sh  kustomization.yaml  namespace.yaml  pvc.yaml  route.yaml  secret.yaml.example  service.yaml
scripts/: dev-mac.sh  smoke-test-mac.sh
tests/: test_customer_xlsx.py  test_rvtools_parser.py  test_web_ui.py
uploads/: customera.xlsx
