[project]
name = "vcenteremu"
version = "0.1.0"
description = "vCenter API emulator powered by RVtools XLSX exports"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openpyxl>=3.1.5",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.4",
    "aiofiles>=24.1.0",
    "pydantic-settings>=2.6.0",
]

[project.scripts]
vcenteremu = "app.main:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project.optional-dependencies]
dev = ["pytest", "httpx", "debugpy"]
